--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,19 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>net.avh4.rpg.generators.heroextant.WorldGenerator</mainClass>
+              <packageName>net.avh4.rpg.generators.heroextant</packageName>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
