--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-        <artifactId>workspace</artifactId>
-        <groupId>net.avh4.framework</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
 
   <groupId>net.avh4.rpg.generators</groupId>
   <artifactId>hero-extant</artifactId>
@@ -13,7 +13,29 @@
   <packaging>jar</packaging>
 
   <name>hero-extant</name>
-  <url>http://maven.apache.org</url>
+  <description />
+  <url>https://github.com/avh4/hero-extant</url>
+  <licenses>
+    <license>
+      <name>The GNU General Public License v3.0</name>
+      <url>http://www.gnu.org/copyleft/gpl.html</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:git:https://github.com/avh4/hero-extant.git</connection>
+    <developerConnection>scm:git:git@github.com:avh4/hero-extant.git</developerConnection>
+    <url>https://github.com/avh4/hero-extant</url>
+  </scm>
+
+  <developers>
+    <developer>
+      <id>avh4</id>
+      <name>Aaron VonderHaar</name>
+      <email>gruen0aermel@gmail.com</email>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
