--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,14 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                    <mainClass>net.avh4.rpg.generators.heroextant.WorldGenerator</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
